--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,7 @@ Version: v0.0.1 */
 /* Import Another Css File in Main Stylesheet */
 
 @import "css-variables.css";
+@import "contact.css";
 @import "responsive-querys.css";
 /* Import Another Css File in Main Stylesheet */
 
@@ -52,7 +53,7 @@ Version: v0.0.1 */
 }
 
 .home-section::before {
-    background-color: rgba(0, 0, 0, .4);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .home-cover-bg::before {
@@ -81,6 +82,11 @@ Version: v0.0.1 */
     color: #e6e6e6;
     font-size: 15px;
     padding: 0;
+}
+
+.nav-menu .navbar-nav .nav-link:hover, .nav-menu .navbar-nav .nav-link:active, .nav-menu .navbar-nav .nav-link:focus {
+    color: rgb(23, 191, 99);
+    transition: 0.9s ease-in-out;
 }
 
 .height-100 {
@@ -167,9 +173,14 @@ Version: v0.0.1 */
 }
 
 .home-section .fixed-wrapper .social-icons i.icon {
-    color: #f3f3f3;
+    color: #fff;
     font-size: 23px;
     line-height: 100%
+}
+
+.home-section .fixed-wrapper .social-icons i.icon:hover {
+    color: rgb(23, 191, 99);
+    transition: 0.9s ease-in-out;
 }
 
 /* Home Page Css Code End */
