--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,9 @@ Version: v0.0.1 */
 
 @import "css-variables.css";
 @import "about.css";
+@import "my-skills.css";
+@import "resume.css";
+@import "portfolio.css";
 @import "contact.css";
 @import "responsive-querys.css";
 /* Import Another Css File in Main Stylesheet */
